--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ set(SOURCE_FILES
         src/cost_model/TraditionalPowerModel.cpp
         src/scheduling_algorithm/IOAwareAlgorithm.h
         src/scheduling_algorithm/IOAwareAlgorithm.cpp
+        src/scheduling_algorithm/IOAwareBalanceAlgorithm.h
+        src/scheduling_algorithm/IOAwareBalanceAlgorithm.cpp
         src/scheduling_algorithm/SchedulingAlgorithm.h
         src/scheduling_algorithm/SPSSEBAlgorithm.h
         src/scheduling_algorithm/SPSSEBAlgorithm.cpp
